force-app/main/default/objects/Step__c/fields/Breach_happens_at__c.field-meta.xml
<CustomField>
    <fullName>Breach_happens_at__c</fullName>
    <formula>IF(
  AND(   
    NOT(ISBLANK(Step_Goal__r.Goal_Field_Change_Handle_Time_Hrs__c)), 
    NOT(ISBLANK(Step_Goal__c )),
    NOT(ISBLANK(TEXT(Step_Goal__r.Goal_Measured_In_units__c))) 
  ), 
  CASE(TEXT(Step_Goal__r.Goal_Measured_In_units__c),
    &quot;Days&quot;, (Field_Value_Initial_Timestamp__c + Step_Goal__r.Goal_Field_Change_Handle_Time_Hrs__c),
    &quot;Hours&quot;, (Field_Value_Initial_Timestamp__c + (Step_Goal__r.Goal_Field_Change_Handle_Time_Hrs__c/24)),
    &quot;Weekdays&quot;, 
    DATETIMEVALUE(CASE( 
      MOD(StartDate__c - DATE( 1900, 1, 7 ), 7 ),
      3, StartDate__c + 2 + Step_Goal__r.Goal_Field_Change_Handle_Time_Hrs__c,
      4, StartDate__c + 2 + Step_Goal__r.Goal_Field_Change_Handle_Time_Hrs__c,
      5, StartDate__c + 2 + Step_Goal__r.Goal_Field_Change_Handle_Time_Hrs__c,
      6, StartDate__c + 1 + Step_Goal__r.Goal_Field_Change_Handle_Time_Hrs__c,
      StartDate__c + Step_Goal__r.Goal_Field_Change_Handle_Time_Hrs__c
    )),
    null
  ),
  null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Based on the goal, when this stage will be breached if not competed by this date/time</inlineHelpText>
    <label>(Deprecated) Breach Happens At</label>
    <type>DateTime</type>
</CustomField>