force-app/main/default/objects/Step__c/fields/BreachTime__c.field-meta.xml
<CustomField>
    <fullName>BreachTime__c</fullName>
    <formula>CASE(TEXT(Step_Goal__r.GoalUnit__c),
 &quot;Days&quot;, InitialTS__c + Step_Goal__r.GoalHandleTimeHrs__c,
 &quot;Hours&quot;, InitialTS__c + (Step_Goal__r.GoalHandleTimeHrs__c/24),
 &quot;Weekdays&quot;, DATETIMEVALUE(StartDate__c + Step_Goal__r.GoalHandleTimeHrs__c +
   CASE(MOD(StartDate__c - DATE(1900,1,7), 7),
     6, 1,
     3, 2,
     4, 2,
     5, 2,
     0)
 ),
 NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>Based on the goal, when this stage will be breached if not competed by this date/time</inlineHelpText>
    <label>Breach Happens At</label>
    <type>DateTime</type>
</CustomField>