force-app/main/default/objects/Step__c/fields/CreatedByMe__c.field-meta.xml
<CustomField>
    <fullName>CreatedByMe__c</fullName>
    <formula>IF( CreatedBy.Id = $User.Id , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Me?</label>
    <type>Checkbox</type>
</CustomField>