force-app/main/default/objects/Step__c/fields/Ending_Timestamp_or_NOW__c.field-meta.xml
<CustomField>
    <fullName>Ending_Timestamp_or_NOW__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Field_Value_Ending_Timestamp__c )),
  Field_Value_Ending_Timestamp__c,
  NOW()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in formula fields for handle time</inlineHelpText>
    <label>(Deprecated) Ending Timestamp or NOW</label>
    <type>DateTime</type>
</CustomField>