force-app/main/default/objects/Step__c/fields/EndingTS__c.field-meta.xml
<CustomField>
    <fullName>EndingTS__c</fullName>
    <description>Captures the timestamp for the conclusion of the tracked Step in the process flow.</description>
    <label>Step Ended At</label>
    <type>DateTime</type>
</CustomField>