force-app/main/default/objects/Step__c/fields/EndTimestamp__c.field-meta.xml
<CustomField>
    <fullName>EndTimestamp__c</fullName>
    <formula>IF(
  NOT(ISBLANK(EndingTS__c )),
  EndingTS__c,
  NOW()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in formula fields for handle time</inlineHelpText>
    <label>Ending Timestamp or NOW</label>
    <type>DateTime</type>
</CustomField>