force-app/main/default/objects/Step__c/fields/Field_Value_Ending__c.field-meta.xml
<CustomField>
    <fullName>Field_Value_Ending__c</fullName>
    <label>Step After This</label>
    <length>255</length>
    <type>Text</type>
</CustomField>