force-app/main/default/objects/Step__c/fields/Field_Value_Initial_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Field_Value_Initial_Timestamp__c</fullName>
    <label>Step Started At</label>
    <type>DateTime</type>
</CustomField>