force-app/main/default/objects/Step__c/fields/Final_Handle_Time__c.field-meta.xml
<CustomField>
    <fullName>Final_Handle_Time__c</fullName>
    <label>Final Handle Time (days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>