force-app/main/default/objects/Step__c/fields/Flow__c.field-meta.xml
<CustomField>
    <fullName>Flow__c</fullName>
    <label>Flow</label>
    <referenceTo>Flow__c</referenceTo>
    <relationshipLabel>Steps in this Flow</relationshipLabel>
    <relationshipName>Steps2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>