force-app/main/default/objects/Step__c/fields/Flow_Goal_ID__c.field-meta.xml
<CustomField>
    <fullName>Flow_Goal_ID__c</fullName>
    <description>Used by Process Builder: Assign Step Goal to Steps with matching Flow Goal</description>
    <formula>CASESAFEID(Flow__r.Goal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The ID of this Step&apos;s Flow&apos;s Goal.</inlineHelpText>
    <label>(Deprecated) Flow Goal ID</label>
    <type>Text</type>
</CustomField>