force-app/main/default/objects/Step__c/fields/FlowGoalID__c.field-meta.xml
<CustomField>
    <fullName>FlowGoalID__c</fullName>
    <description>Used by: Assign Step Goal to Steps with matching Flow Goal</description>
    <formula>CASESAFEID(Flow__r.Goal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The ID of thisTrackerStep.TrackerFlow.GoalFlow</inlineHelpText>
    <label>Goal Flow: ID</label>
    <type>Text</type>
</CustomField>