force-app/main/default/objects/Step__c/fields/Goal_Breached__c.field-meta.xml
<CustomField>
    <fullName>Goal_Breached__c</fullName>
    <formula>HandleTimeVsGoal__c &gt; 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to flag when something spends more time in a stage than the Goal</inlineHelpText>
    <label>(Deprecated) Goal Breached</label>
    <type>Checkbox</type>
</CustomField>