force-app/main/default/objects/Step__c/fields/Goal_Field_Change_Handle_Time_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Goal_Field_Change_Handle_Time_Hrs__c</fullName>
    <label>Goal: Handle Time</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>