force-app/main/default/objects/Step__c/fields/GoalHandleTimeHrs__c.field-meta.xml
<CustomField>
    <fullName>GoalHandleTimeHrs__c</fullName>
    <label>Goal: Handle Time</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>