force-app/main/default/objects/Step__c/fields/GoalUnit__c.field-meta.xml
<CustomField>
    <fullName>GoalUnit__c</fullName>
    <label>Goal: Handle Time Measured In (units)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
                <default>true</default>
                <label>Days</label>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Weekdays</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>