force-app/main/default/objects/Step__c/fields/Handle_Time_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Handle_Time_Business_Hours__c</fullName>
    <inlineHelpText>This field will be blank until you set up Business Hours and Activate the Flow called &quot;Flowdometer - Autocalculate Business Hours&quot;</inlineHelpText>
    <label>Handle Time (Business Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>