force-app/main/default/objects/Step__c/fields/Handle_Time_vs_Goal__c.field-meta.xml
<CustomField>
    <fullName>Handle_Time_vs_Goal__c</fullName>
    <formula>IF(
  AND(
    NOT(ISBLANK(Step_Goal__r.Goal_Field_Change_Handle_Time_Hrs__c)),
    NOT(ISBLANK(Step_Handle_Time__c)),
    NOT(Step_Goal__r.Goal_Field_Change_Handle_Time_Hrs__c = 0),
    NOT(ISBLANK(TEXT(Step_Goal__r.Goal_Measured_In_units__c)))
  ),   
  CASE(TEXT(Step_Goal__r.Goal_Measured_In_units__c),
    &quot;Hours&quot;, (Step_Handle_Time__c * 24),
    &quot;Days&quot;, Step_Handle_Time__c,
    &quot;Weekdays&quot;, HandleTimeWeekdays__c,
    null
    )/Step_Goal__r.Goal_Field_Change_Handle_Time_Hrs__c
  ,null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Deprecated) Handle Time vs Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>