force-app/main/default/objects/Step__c/fields/HandleTimeVsGoal__c.field-meta.xml
<CustomField>
    <fullName>HandleTimeVsGoal__c</fullName>
    <formula>CASE(TEXT(Step_Goal__r.GoalUnit__c),
  &quot;Hours&quot;, Step_Handle_Time__c * 24,
  &quot;Days&quot;, Step_Handle_Time__c,
  &quot;Weekdays&quot;, HandleTimeWeekdays__c,
  NULL
) / IF(Step_Goal__r.GoalHandleTimeHrs__c = 0, NULL, Step_Goal__r.GoalHandleTimeHrs__c)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Handle Time vs Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>