force-app/main/default/objects/Step__c/fields/History_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>History_Record_ID__c</fullName>
    <label>History Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>