force-app/main/default/objects/Step__c/fields/History_Record_ID_for_Last_Step__c.field-meta.xml
<CustomField>
    <fullName>History_Record_ID_for_Last_Step__c</fullName>
    <label>History Record ID for Last Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>