force-app/main/default/objects/Step__c/fields/Initial_Timestamp_or_CREATED__c.field-meta.xml
<CustomField>
    <fullName>Initial_Timestamp_or_CREATED__c</fullName>
    <formula>IF(
NOT(ISBLANK( Field_Value_Initial_Timestamp__c  )),
Field_Value_Initial_Timestamp__c,
CreatedDate
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in formula fields for handle time</inlineHelpText>
    <label>(Deprecated) Initial Timestamp orCREATED</label>
    <type>DateTime</type>
</CustomField>