force-app/main/default/objects/Step__c/fields/InitialTimestamp__c.field-meta.xml
<CustomField>
    <fullName>InitialTimestamp__c</fullName>
    <formula>IF(
NOT(ISBLANK( InitialTS__c  )),
InitialTS__c,
CreatedDate
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in formula fields for handle time</inlineHelpText>
    <label>Initial Timestamp or CREATED</label>
    <type>DateTime</type>
</CustomField>