force-app/main/default/objects/Step__c/fields/InitialTS__c.field-meta.xml
<CustomField>
    <fullName>InitialTS__c</fullName>
    <description>Marks the timestamp for the initiation of the tracked Step in the process flow.</description>
    <label>Step Started At</label>
    <type>DateTime</type>
</CustomField>