force-app/main/default/objects/Step__c/fields/isGoal__c.field-meta.xml
<CustomField>
    <fullName>isGoal__c</fullName>
    <formula>RecordType.Name = &quot;Goal&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Goal?</label>
    <type>Checkbox</type>
</CustomField>