force-app/main/default/objects/Step__c/fields/Last_Step__c.field-meta.xml
<CustomField>
    <fullName>Last_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Step Object that preceded this one</inlineHelpText>
    <label>Last Step</label>
    <referenceTo>Step__c</referenceTo>
    <relationshipLabel>Next Step</relationshipLabel>
    <relationshipName>Steps</relationshipName>
    <type>Lookup</type>
</CustomField>