force-app/main/default/objects/Step__c/fields/Next_Step_vs_Goal_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_vs_Goal_Next_Step__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Step_Goal__r.Field_Value_Ending__c)),
  IF(Step_Goal__r.Field_Value_Ending__c = Field_Value_Ending__c,
    &quot;Matched goal&quot;,
    &quot;Deviated from goal&quot;
  ),
  &quot;Unknown&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Describes whether stages were followed in the order prescribed by the Goal</inlineHelpText>
    <label>(Deprecated) Next Step vs Goal Next Step</label>
    <type>Text</type>
</CustomField>