force-app/main/default/objects/Step__c/fields/Progress_Bar_Elapsed_Color__c.field-meta.xml
<CustomField>
    <fullName>Progress_Bar_Elapsed_Color__c</fullName>
    <formula>IF(
  StepActive__c,
  &quot;/resource/PrimaryBlue&quot;,
  &quot;/resource/CompletedGreen&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Deprecated) Progress Bar Elapsed Color</label>
    <type>Text</type>
</CustomField>