force-app/main/default/objects/Step__c/fields/Progress_Bar_Remaining_Color__c.field-meta.xml
<CustomField>
    <fullName>Progress_Bar_Remaining_Color__c</fullName>
    <formula>IF( OR(Terminal_Stage__c, isGoal__c ),
  &quot;/resource/Blank&quot;,
  IF( ISBLANK(Next_Step__c ),
    &quot;/resource/LightBlue&quot;,
    &quot;/resource/UnusedGray&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Deprecated) ProgressBar Remaining Color</label>
    <type>Text</type>
</CustomField>