force-app/main/default/objects/Step__c/fields/ProgressBarColorFlag__c.field-meta.xml
<CustomField>
    <fullName>ProgressBarColorFlag__c</fullName>
    <formula>IF(
        AND(
            StepActive__c,
            HandleTimeVsGoal__c > 0.8,
            HandleTimeVsGoal__c < 1
        ),
        'Warning',
        IF(
            HandleTimeVsGoal__c >= 1,
            'Breached',
            IF(
                StepActive__c,
                'Active',
                'Completed'
            )
        )
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress Bar Color Status</label>
    <type>Text</type>
</CustomField> 