force-app/main/default/objects/Step__c/fields/ProgressBarElapsedColor__c.field-meta.xml
<CustomField>
    <fullName>ProgressBarElapsedColor__c</fullName>
    <formula>IF(
  StepActive__c,
  IF(
    HandleTimeVsGoal__c > 0.8,
    "/resource/Flowdometer__ExpiringRed",
    "/resource/Flowdometer__PrimaryBlue"
  ),
  "/resource/Flowdometer__CompletedGreen"
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress Bar Elapsed Color</label>
    <type>Text</type>
</CustomField>