force-app/main/default/objects/Step__c/fields/ProgressBarRemainingColor__c.field-meta.xml
<CustomField>
    <fullName>ProgressBarRemainingColor__c</fullName>
    <formula>IF( OR(Terminal_Stage__c, isGoal__c ),
  &quot;/resource/Flowdometer__Blank&quot;,
  IF( ISBLANK(Next_Step__c ),
    &quot;/resource/Flowdometer__LightBlue&quot;,
    &quot;/resource/Flowdometer__UnusedGray&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress Bar Remaining Color</label>
    <type>Text</type>
</CustomField>