force-app/main/default/objects/Step__c/fields/ProgressBarVsGoal__c.field-meta.xml
<CustomField>
    <fullName>ProgressBarVsGoal__c</fullName>
    <formula>IF(
    HandleTimeVsGoal__c&lt;1,
    IMAGE( ProgressBarElapsedColor__c ,&quot;Progress&quot;,10,100*HandleTimeVsGoal__c)+IMAGE( ProgressBarRemainingColor__c ,&quot;Remaining&quot;,10, 100*(1-HandleTimeVsGoal__c)),
    &quot;Breached&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress Bar vs Goal</label>
    <type>Text</type>
</CustomField>