force-app/main/default/objects/Step__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Reflects the order of operations or events being tracked in a Step. Incrementing values signify following steps in the sequence.</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>