force-app/main/default/objects/Step__c/fields/Sequence_and_Initial_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Sequence_and_Initial_Field_Value__c</fullName>
    <formula>TEXT(Sequence__c) &amp; &quot; &quot;&amp; Field_Value_Initial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Deprecated) Step Order and Value</label>
    <type>Text</type>
</CustomField>