force-app/main/default/objects/Step__c/fields/SequenceInitialFieldValue__c.field-meta.xml
<CustomField>
    <fullName>SequenceInitialFieldValue__c</fullName>
    <formula>TEXT(Sequence__c) &amp; &quot; &quot;&amp; Field_Value_Initial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step Order and Value</label>
    <type>Text</type>
</CustomField>