force-app/main/default/objects/Step__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Used in calculation for Breach Happens At</description>
    <formula>DATEVALUE(Field_Value_Initial_Timestamp__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Deprecated) Step Started Date</label>
    <type>Date</type>
</CustomField>