force-app/main/default/objects/Step__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Used in calculation for Breach Happens At</description>
    <formula>DATEVALUE(InitialTS__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step Started Date</label>
    <type>Date</type>
</CustomField>