force-app/main/default/objects/Step__c/fields/Step_Goal__c.field-meta.xml
<CustomField>
    <fullName>Step_Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>References the optimal time duration for the Step, allowing Step duration to be contrasted with the intended process time.</description>
    <label>Goal Step</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value must be of &quot;Step Goal&quot; Record Type</errorMessage>
        <filterItems>
            <field>Step__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Goal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Step__c</referenceTo>
    <relationshipLabel>Tracker Steps with this Goal Step</relationshipLabel>
    <relationshipName>Steps3</relationshipName>
    <type>Lookup</type>
</CustomField>