force-app/main/default/objects/Step__c/fields/Step_Handle_Time__c.field-meta.xml
<CustomField>
    <fullName>Step_Handle_Time__c</fullName>
    <formula>IF( AND (Terminal_Stage__c, ISBLANK( Next_Step__c )) ,
null,
IF(NOT(ISBLANK(EndingTS__c )),
	EndingTS__c - InitialTS__c,
	IF(NOT(ISBLANK(InitialTS__c)),
		NOW() - InitialTS__c,
		NOW() - CreatedDate
	)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handle Time (Days in this Step)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>