force-app/main/default/objects/Step__c/fields/Step_is_currently_active__c.field-meta.xml
<CustomField>
    <fullName>Step_is_currently_active__c</fullName>
    <formula>IF(
  AND(
    NOT(isGoal__c),
    NOT(Terminal_Stage__c),
    ISBLANK(Next_Step__c)
  ),
  true,
  false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This flag identifies the steps your team is currently working through.</inlineHelpText>
    <label>(Deprecated) Step Is Currently Active?</label>
    <type>Checkbox</type>
</CustomField>