force-app/main/default/objects/Step__c/fields/StepActive__c.field-meta.xml
<CustomField>
    <fullName>StepActive__c</fullName>
    <formula>AND(NOT(isGoal__c), NOT(Terminal_Stage__c), ISBLANK(Next_Step__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This flag identifies the steps your team is currently working through.</inlineHelpText>
    <label>Step Is Currently Active?</label>
    <type>Checkbox</type>
</CustomField>