force-app/main/default/objects/Step__c/fields/StepVsTotal__c.field-meta.xml
<CustomField>
    <fullName>StepVsTotal__c</fullName>
    <formula>IF(GoalHandleTimeHrs__c&gt;0,
(GoalHandleTimeHrs__c/ Flow__r.GoalCycleTime__c),IF(Final_Handle_Time__c &gt; 0,
(Final_Handle_Time__c /  Flow__r.HandleTimeToCurrent__c ),null)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Portion this step is out of the total Cycle Time.</inlineHelpText>
    <label>Step % of Cycle Time</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>