force-app/main/default/objects/Step__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this if this final step means you&apos;ve accomplished the intended outcome of your process. For Example: Closed Won, Closed, Converted, Completed, Finished, Approved etc.</description>
    <inlineHelpText>Check this if this final step means you&apos;ve accomplished the intended outcome of your process. For Example: Closed Won, Closed, Converted, Completed, Finished, Approved etc.</inlineHelpText>
    <label>Process Succeeded?</label>
    <type>Checkbox</type>
</CustomField>