force-app/main/default/objects/Step__c/fields/Terminal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates when the Step is at its final sequence, signaling that tracking is completed.</description>
    <label>Is Final Step?</label>
    <type>Checkbox</type>
</CustomField>