force-app/main/default/objects/Step__c/fields/Time_since_breach_in_hrs__c.field-meta.xml
<CustomField>
    <fullName>Time_since_breach_in_hrs__c</fullName>
    <formula>IF(
	AND(
		NOT(Terminal_Stage__c),
		NOT(isGoal__c)
	),
	MAX(
		IF(
			NOT(ISBLANK(BreachTime__c)),
			IF(
				NOT(ISBLANK(Field_Value_Ending_Timestamp__c)),
				Field_Value_Ending_Timestamp__c - BreachTime__c,
				NOW()-BreachTime__c
			),
			null
		),
		0
	),
	null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time since breach in days. Stops when the next Step is reached</inlineHelpText>
    <label>(Deprecated) Time Since Breach (in days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>