force-app/main/default/objects/Step__c/fields/TimeSinceBreach__c.field-meta.xml
<CustomField>
    <fullName>TimeSinceBreach__c</fullName>
    <formula>IF(AND(NOT(Terminal_Stage__c), NOT(isGoal__c), NOT(ISBLANK(BreachTime__c))), MAX(BLANKVALUE(EndingTS__c, NOW()) - BreachTime__c, 0), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time since breach in days. Stops when the next Step is reached</inlineHelpText>
    <label>Time Since Breach (in days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>