force-app/main/default/objects/Step__c/fields/TimeUntilBreach__c.field-meta.xml
<CustomField>
    <fullName>TimeUntilBreach__c</fullName>
    <formula>IF(AND(NOT(Terminal_Stage__c), NOT(isGoal__c), StepActive__c, NOT(ISBLANK(BreachTime__c))), MAX(BreachTime__c - NOW(), 0), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time remaining until the goal for completing this Step is surpassed</inlineHelpText>
    <label>Time Until Breach (in days)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>