force-app/main/default/objects/Step__c/fields/Tracked_Field_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Tracked_Field_Name_c__c</fullName>
    <formula>Flow__r.Tracked_Field_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Deprecated) Tracked Field Name</label>
    <type>Text</type>
</CustomField>