force-app/main/default/objects/Step__c/fields/Tracked_Object_Link__c.field-meta.xml
<CustomField>
    <fullName>Tracked_Object_Link__c</fullName>
    <formula>Flow__r.Tracked_Object_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Deprecated) Tracked Object Link</label>
    <type>Text</type>
</CustomField>