force-app/main/default/objects/Step__c/fields/Tracked_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Tracked_Object_Type__c</fullName>
    <formula>Flow__r.Tracked_Object__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Deprecated) Tracked Object Type</label>
    <type>Text</type>
</CustomField>