force-app/main/default/objects/Step__c/fields/TrackedFieldName__c.field-meta.xml
<CustomField>
    <fullName>TrackedFieldName__c</fullName>
    <formula>Flow__r.Tracked_Field_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tracked Field Name</label>
    <type>Text</type>
</CustomField>