force-app/main/default/objects/Step__c/fields/TrackedObjectLink__c.field-meta.xml
<CustomField>
    <fullName>TrackedObjectLink__c</fullName>
    <formula>Flow__r.Tracked_Object_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tracked Object Link</label>
    <type>Text</type>
</CustomField>