force-app/main/default/objects/Step__c/fields/TrackedObjectType__c.field-meta.xml
<CustomField>
    <fullName>TrackedObjectType__c</fullName>
    <formula>Flow__r.Tracked_Object__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tracked Object Type</label>
    <type>Text</type>
</CustomField>