force-app/main/default/objects/Step__c/recordTypes/Tracker.recordType-meta.xml
<RecordType>
    <fullName>Tracker</fullName>
    <active>true</active>
    <label>Tracker</label>
</RecordType>