force-app/main/default/objects/Step__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TrackedObjectType__c</columns>
    <columns>Field_Value_Initial__c</columns>
    <columns>ProgressBarVsGoal__c</columns>
    <columns>HandleTimeVsGoal__c</columns>
    <columns>isGoal__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>EndingTS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>isGoal__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Trackers</label>
</ListView>